--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Cursed Timer ULiL;
+    src: url(fonts/CursedTimerULiL.ttf);
+}
+
 body {
     background: #1B244A;
     margin: 68px;
@@ -12,7 +17,7 @@ body {
     left: 100px;
     top: 125px;
 
-    font-family: 'Cursed Timer ULiL';
+    font-family: Cursed Timer ULiL;
     font-weight: 400;
     font-size: 90px;
     line-height: 141%;
@@ -34,7 +39,7 @@ body {
     border: 2px solid #9AABD8;
     border-radius: 5px;
     background: none;
-    font-family: 'Cursed Timer ULiL';
+    font-family: Cursed Timer ULiL;
     color: #9AABD8
 }
 .resetButton {
@@ -43,7 +48,7 @@ body {
     border: 2px solid #9AABD8;
     border-radius: 5px;
     background: none;
-    font-family: 'Cursed Timer ULiL';
+    font-family: Cursed Timer ULiL;
     color: #9AABD8;
 }
 
